--- a/CensusAnalyserProblemTest/CensusAnalyserProblemTest.csproj
+++ b/CensusAnalyserProblemTest/CensusAnalyserProblemTest.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Resources\USCensusData.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Resources\USCensusData.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
